--- a/docs/content/en/1.index.md
+++ b/docs/content/en/1.index.md
@@ -1,7 +1,6 @@
 ---
 title: Introduction
 description: 'HTTP module for Nuxt.js provides a universal way to make HTTP requests to the API backend.'
-position: 1
 category: ''
 features:
   - The fluent ky API has been extended with enhancements and shortcuts
@@ -11,8 +10,8 @@ features:
   - Easy proxy support to avoid CORS problems and making deployment easier
 ---
 
-<img src="/preview.png" class="light-img shadow rounded-md hover:shadow-lg transition-shadow duration-200" />
-<img src="/preview-dark.png" class="dark-img shadow rounded-md hover:shadow-lg transition-shadow duration-200" />
+<img src="/preview.png" class="transition-shadow duration-200 rounded-md shadow light-img hover:shadow-lg" />
+<img src="/preview-dark.png" class="transition-shadow duration-200 rounded-md shadow dark-img hover:shadow-lg" />
 
 The HTTP module for [Nuxt](https://nuxtjs.org) provides a universal way to make HTTP requests to any API.
 
@@ -25,8 +24,6 @@ Starting from [v2.5.0](https://github.com/nuxt/nuxt.js/releases/tag/v2.5.0), Nux
 ## Features
 
 <list :items="features"></list>
-
-<p class="flex items-center">Enjoy a documentation with light and dark mode:&nbsp;<app-color-switcher class="p-2"></app-color-switcher></p>
 
 ## Links
 
