Add TypeScript note to docs

--- a/docs/content/en/2.setup.md
+++ b/docs/content/en/2.setup.md
@@ -64,3 +64,21 @@ See [http's options](/options).
 Note that this module does not currently support IE 11 because of using [ky](https://github.com/sindresorhus/ky) ([open issue](https://github.com/nuxt/http/issues/126))
 
 </alert>
+
+## TypeScript
+
+Add the types to your "types" array in `tsconfig.json` after the `@nuxt/types` (Nuxt 2.9.0+) or `@nuxt/vue-app` entry
+
+```json{}[tsconfig.json]
+{
+  "compilerOptions": {
+    "types": [
+      "@nuxt/types",
+      "@nuxtjs/http"
+    ]
+  }
+}
+```
+> **Why?**
+>
+> Because of the way Nuxt works the `$http` property on the context has to be merged into the Nuxt `Context` interface via [declaration merging](https://www.typescriptlang.org/docs/handbook/declaration-merging.html). Adding `@nuxtjs/http` to your types will import the types from the package and make typescript aware of the additions to the `Context` interface.
