--- a/docs/content/en/2.setup.md
+++ b/docs/content/en/2.setup.md
@@ -74,7 +74,7 @@ Add the types to your "types" array in `tsconfig.json` after the `@nuxt/types` (
   "compilerOptions": {
     "types": [
       "@nuxt/types",
-      "@nuxtjs/http"
+      "@nuxt/http"
     ]
   }
 }
