--- a/docs/content/en/2.setup.md
+++ b/docs/content/en/2.setup.md
@@ -64,3 +64,29 @@ See [http's options](/options).
 Note that this module does not currently support IE 11 because of using [ky](https://github.com/sindresorhus/ky) ([open issue](https://github.com/nuxt/http/issues/126))
 
 </alert>
+
+## Using with TypeScript
+
+<alert type="info">
+
+For more information about using TypeScript in your Nuxt.js project, visit the [Nuxt Typescript documentation](https://typescript.nuxtjs.org/).
+
+</alert>
+
+Add `@nuxt/http` to the `compilerOptions.types` section of your project's `tsconfig.json` file:
+
+```json{}[tsconfig.json]
+{
+  compilerOptions: {
+    "types": [
+      "@nuxt/http",
+    ]
+  },
+}
+```
+
+<alert type="warning">
+
+If you still receive errors after installing the types package, it may be necessary to restart your code editor so that the new types are recognized.
+
+</alert>
