:pencil: (docs) update docs

--- a/docs/pages/en/1.getting-started/2.usage.md
+++ b/docs/pages/en/1.getting-started/2.usage.md
@@ -1,7 +1,6 @@
 ---
 title: Usage
 description: 'How to use this module'
-category: Getting Started
 ---
 
 ## Making Requests
@@ -11,6 +10,7 @@ See the list of [available HTTP methods](/http-methods).
 Calling a HTTP methods returns a `Promise` that resolves to a [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) object or rejects in case of network errors.
 
 You can use methods to convert response stream into usable data:
+
 - `json`
 - `text`
 - `formData`
@@ -29,16 +29,17 @@ console.log(package.name) // log "nuxt"
 
 In most of the case, you want to get the JSON response. You can use `$` prefixed shortcut that smartly parses response using [destr](https://github.com/nuxt-contrib/destr).
 
-
 Alternatively for other response type, you can use the methods mentioned above:
 
 **Example: GET data as `text`**
+
 ```js
 const res = await $http.get('https://unpkg.com/nuxt/package.json')
 const responseText = await res.text()
 ```
 
 **Example: GET data as `arrayBuffer`**
+
 ```js
 const response = await this.$http.get('https://nuxtjs.org/logos/nuxt.svg')
 const buffer = await response.arrayBuffer()
@@ -46,6 +47,7 @@ console.log('buffer.byteLength = ', buffer.byteLength)
 ```
 
 **Example: GET data as `readable stream`**
+
 ```js
 const response = await this.$http.get('https://example.org')
 const reader = response.body.getReader()
@@ -106,11 +108,9 @@ methods: {
 }
 ```
 
-<alert type="info">
-
+:::alert{type="info"}
 `this` is not available in Nuxt's `asyncData` method, see [using in `asyncData`](#using-in-asyncdata) for how to use this module in `asyncData`
-
-</alert>
+:::
 
 ## Using in Store
 
