--- a/docs/pages/en/1.getting-started/3.http-methods.md
+++ b/docs/pages/en/1.getting-started/3.http-methods.md
@@ -1,16 +1,14 @@
 ---
 title: HTTP Methods
 description: 'HTTP Methods'
-category: Getting Started
 ---
 
-<alert type="info">
-
+:::alert{type="info"}
 Each http method returns a `Promise`
-
-</alert>
+:::
 
 ### `$get`
+
 - arguments: `(url, options?)`
   - url: `String`
   - options: [options](/options)
@@ -29,6 +27,7 @@ const items = await $http.$get('items', { prefixUrl: 'https://example.com' })
 ```
 
 ### `$post`
+
 - arguments: `(url, body?, options?)`
   - url: `String`
   - body: `Object`
@@ -52,6 +51,7 @@ const data = await $http.$post('http://api.com', { foo: 'bar' }, {
 ```
 
 ### `$put`
+
 - arguments: `(url, body?, options?)`
   - url: `String`
   - body: `Object`
@@ -73,6 +73,7 @@ const data = await $http.$put('http://api.com/{id}', { foo: 'bar' }, {
 ```
 
 ### `$delete`
+
 - arguments: `(url, options?)`
   - url: `String`
   - options: [options](/options)
@@ -94,6 +95,7 @@ const jsonResponse = await $http.$delete('item/{id}', {
 ```
 
 ### `$patch`
+
 - arguments: `(url, body?, options?)`
   - url: `String`
   - body: `Object`
@@ -116,6 +118,7 @@ const data = await $http.$patch('http://api.com/{id}', { foo: 'bar' }, {
 ```
 
 ### `$head`
+
 - arguments: `(url, options?)`
   - url: `String`
   - options: [options](/options)
@@ -123,6 +126,7 @@ const data = await $http.$patch('http://api.com/{id}', { foo: 'bar' }, {
 - rejects: `Error`
 
 ### `get`
+
 - arguments: `(url, options?)`
   - url: `String`
   - options: [options](/options)
@@ -147,6 +151,7 @@ See [`here`](/usage#making-requests) to convert response stream into usable data
 These methods corresponds to the similar named HTTP/1.1 methods.
 
 ### `post`
+
 - arguments: `(url, body?, options?)`
   - url: `String`
   - body: `Object`
@@ -176,6 +181,7 @@ See [`here`](/usage#making-requests) to convert response stream into usable data
 These methods corresponds to the similar named HTTP/1.1 methods.
 
 ### `put`
+
 - arguments: `(url, body?, options?)`
   - url: `String`
   - body: `Object`
@@ -203,6 +209,7 @@ See [`here`](/usage#making-requests) to convert response stream into usable data
 These methods corresponds to the similar named HTTP/1.1 methods.
 
 ### `delete`
+
 - arguments: `(url, options?)`
   - url: `String`
   - options: [options](/options)
@@ -228,6 +235,7 @@ See [`here`](/usage#making-requests) to convert response stream into usable data
 These methods corresponds to the similar named HTTP/1.1 methods.
 
 ### `patch`
+
 - arguments: `(url, body?, options?)`
   - url: `String`
   - body: `Object`
@@ -256,6 +264,7 @@ See [`here`](/usage#making-requests) to convert response stream into usable data
 These methods corresponds to the similar named HTTP/1.1 methods.
 
 ### `head`
+
 - arguments: `(url, options?)`
   - url: `String`
   - options: [options](/options)
