--- a/docs/pages/en/1.index.md
+++ b/docs/pages/en/1.index.md
@@ -1,16 +1,10 @@
 ---
 title: Introduction
 description: 'HTTP module for Nuxt.js provides a universal way to make HTTP requests to the API backend.'
-category: ''
-features:
-  - The fluent ky API has been extended with enhancements and shortcuts
-  - Highly customizable options support for `BaseURL`
-  - Automatically proxy cookies and headers when making requests from server side
-  - Best practices to avoid token sharing when making server side requests
-  - Easy proxy support to avoid CORS problems and making deployment easier
 ---
 
 <img src="/preview.png" class="transition-shadow duration-200 rounded-md shadow light-img hover:shadow-lg" />
+
 <img src="/preview-dark.png" class="transition-shadow duration-200 rounded-md shadow dark-img hover:shadow-lg" />
 
 The HTTP module for [Nuxt](https://nuxtjs.org) provides a universal way to make HTTP requests to any API.
@@ -23,7 +17,15 @@ Starting from [v2.5.0](https://github.com/nuxt/nuxt.js/releases/tag/v2.5.0), Nux
 
 ## Features
 
-<list :items="features"></list>
+:::list
+
+- The fluent ky API has been extended with enhancements and shortcuts
+- Highly customizable options support for `BaseURL`
+- Automatically proxy cookies and headers when making requests from server side
+- Best practices to avoid token sharing when making server side requests
+- Easy proxy support to avoid CORS problems and making deployment easier
+
+:::
 
 ## Links
 
