--- a/docs/pages/en/3.migration-guides/1.migration.md
+++ b/docs/pages/en/3.migration-guides/1.migration.md
@@ -1,16 +1,13 @@
 ---
 title: Migration Guides
 description: 'How to migrate from Axios module'
-category: Migration
 ---
 
 This guide will help you to migrate from [Axios Module](https://github.com/nuxt-community/axios-module).
 
-<alert type="info">
-
+:::alert{type="info"}
 The nuxt-community axios module is still supported and maintained. The HTTP module uses newer web technologies like fetch which might be beneficial
-
-</alert>
+:::
 
 ## Differences
 
