--- a/docs/pages/en/1.getting-started/1.setup.md
+++ b/docs/pages/en/1.getting-started/1.setup.md
@@ -1,7 +1,6 @@
 ---
 title: Setup
 description: 'How to setup your module'
-category: Getting Started
 ---
 
 Checkout the [Nuxt documentation](https://nuxtjs.org/api/configuration-modules#the-modules-property) for more information about installing and using modules.
@@ -10,22 +9,22 @@ Checkout the [Nuxt documentation](https://nuxtjs.org/api/configuration-modules#t
 
 Add `@nuxt/http` dependency to your project:
 
-<code-group>
-  <code-block label="Yarn" active>
+:::::code-group
+  ::::code-block{label="Yarn" active}
 
   ```bash
   yarn add @nuxt/http
   ```
 
-  </code-block>
-  <code-block label="NPM">
+  ::::
+  ::::code-block{label="NPM"}
 
   ```bash
   npm install @nuxt/http
   ```
 
-  </code-block>
-</code-group>
+  ::::
+:::::
 
 Then add it to the modules section in your `nuxt.config.js`:
 
@@ -35,11 +34,9 @@ export default {
 }
 ```
 
-<alert type="success">
-
+:::alert{type="success"}
 That's it! You can now use [$http](/usage) in your Nuxt app ✨
-
-</alert>
+:::
 
 ## Configure
 
@@ -59,8 +56,6 @@ export default {
 
 See [http's options](/options).
 
-<alert type="warning">
-
+:::alert{type="warning"}
 Note that this module does not currently support IE 11 because of using [ky](https://github.com/sindresorhus/ky) ([open issue](https://github.com/nuxt/http/issues/126))
-
-</alert>
+:::
