--- a/docs/pages/en/1.getting-started/4.advanced.md
+++ b/docs/pages/en/1.getting-started/4.advanced.md
@@ -1,7 +1,6 @@
 ---
 title: Advanced
 description: 'Advanced concepts'
-category: Getting Started
 ---
 
 ## Hooks
@@ -54,19 +53,15 @@ export default function ({ $http }) {
 
 Globally set a header to all subsequent requests.
 
-<alert type="warning">
-
+:::alert{type="warning"}
 This method should probably not be called inside hooks as it is global and will apply to all future requests
+:::
 
-</alert>
-
-<alert type="info">
-
+:::alert{type="info"}
 Please note that HTTP headers are case-insensitive. Therefore all header names will be converted to lower-case to make sure that if you set the same header twice but with different casing the last one set will be used.
 
 See also [this comment](https://github.com/sindresorhus/ky/issues/105#issuecomment-470169100) in the Ky repository for more information
-
-</alert>
+:::
 
 Parameters:
 
@@ -91,11 +86,9 @@ this.$http.setHeader('Content-Type', false)
 
 Globally set `Authorization` header to all subsequent requests.
 
-<alert type="info">
-
+:::alert{type="info"}
 This is a global method, you only have to call it once after which all future requests will include the token
-
-</alert>
+:::
 
 Parameters:
 
