--- a/docs/pages/en/2.API/3.helpers.md
+++ b/docs/pages/en/2.API/3.helpers.md
@@ -1,14 +1,11 @@
 ---
 title: Helpers
 description: 'Helpers available on $http instance.'
-category: API
 --- 
 
-<alert type="info">
-
+:::alert{type="info"}
 Helpers available on `$http` instance.
-
-</alert>
+:::
 
 ## `setBaseURL`
 
@@ -46,7 +43,8 @@ this.$http.getBaseURL()
 
 Globally set a header to all subsequent requests
 
-**Example: **
+**Example:**
+
 ```js
 // Add header `Content-Type: application/json`
 this.$http.setHeader('Content-Type', 'application/json')
