--- a/docs/pages/en/1.getting-started/1.setup.md
+++ b/docs/pages/en/1.getting-started/1.setup.md
@@ -54,7 +54,7 @@ export default {
 }
 ```
 
-See [http's options](/options).
+See [http's options](/API/options).
 
 :::alert{type="warning"}
 Note that this module does not currently support IE 11 because of using [ky](https://github.com/sindresorhus/ky) ([open issue](https://github.com/nuxt/http/issues/126))
