--- a/docs/pages/en/1.getting-started/1.setup.md
+++ b/docs/pages/en/1.getting-started/1.setup.md
@@ -35,7 +35,7 @@ export default {
 ```
 
 :::alert{type="success"}
-That's it! You can now use [$http](/usage) in your Nuxt app ✨
+That's it! You can now use [$http](/getting-started/usage) in your Nuxt app ✨
 :::
 
 ## Configure
@@ -54,7 +54,7 @@ export default {
 }
 ```
 
-See [http's options](/API/options).
+See [http's options](/api/options).
 
 :::alert{type="warning"}
 Note that this module does not currently support IE 11 because of using [ky](https://github.com/sindresorhus/ky) ([open issue](https://github.com/nuxt/http/issues/126))
