--- a/docs/pages/en/1.getting-started/2.usage.md
+++ b/docs/pages/en/1.getting-started/2.usage.md
@@ -5,7 +5,7 @@ description: 'How to use this module'
 
 ## Making Requests
 
-See the list of [available HTTP methods](/http-methods).
+See the list of [available HTTP methods](/getting-started/http-methods).
 
 Calling a HTTP methods returns a `Promise` that resolves to a [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) object or rejects in case of network errors.
 
