--- a/docs/pages/en/1.getting-started/3.http-methods.md
+++ b/docs/pages/en/1.getting-started/3.http-methods.md
@@ -11,7 +11,7 @@ Each http method returns a `Promise`
 
 - arguments: `(url, options?)`
   - url: `String`
-  - options: [options](/options)
+  - options: [options](/api/options)
 - resolves: [JSON](https://developer.mozilla.org/en-US/docs/Web/API/Body/json) if [destr](https://github.com/nuxt-contrib/destr) can convert automatically, otherwise fallback to String
 - rejects: `Error`
 
@@ -31,7 +31,7 @@ const items = await $http.$get('items', { prefixUrl: 'https://example.com' })
 - arguments: `(url, body?, options?)`
   - url: `String`
   - body: `Object`
-  - options: [options](/options)
+  - options: [options](/api/options)
 - resolves: [JSON](https://developer.mozilla.org/en-US/docs/Web/API/Body/json) if [destr](https://github.com/nuxt-contrib/destr) can convert automatically, otherwise fallback to String
 - rejects: `Error`
 
@@ -55,7 +55,7 @@ const data = await $http.$post('http://api.com', { foo: 'bar' }, {
 - arguments: `(url, body?, options?)`
   - url: `String`
   - body: `Object`
-  - options: [options](/options)
+  - options: [options](/api/options)
 - resolves: [JSON](https://developer.mozilla.org/en-US/docs/Web/API/Body/json) if [destr](https://github.com/nuxt-contrib/destr) can convert automatically, otherwise fallback to String
 - rejects: `Error`
 
@@ -76,7 +76,7 @@ const data = await $http.$put('http://api.com/{id}', { foo: 'bar' }, {
 
 - arguments: `(url, options?)`
   - url: `String`
-  - options: [options](/options)
+  - options: [options](/api/options)
 - resolves: [JSON](https://developer.mozilla.org/en-US/docs/Web/API/Body/json) if [destr](https://github.com/nuxt-contrib/destr) can convert automatically, otherwise fallback to String
 - rejects: `Error`
 
@@ -99,7 +99,7 @@ const jsonResponse = await $http.$delete('item/{id}', {
 - arguments: `(url, body?, options?)`
   - url: `String`
   - body: `Object`
-  - options: [options](/options)
+  - options: [options](/api/options)
 - resolves: [JSON](https://developer.mozilla.org/en-US/docs/Web/API/Body/json) if [destr](https://github.com/nuxt-contrib/destr) can convert automatically, otherwise fallback to String
 - rejects: `Error`
 
@@ -121,7 +121,7 @@ const data = await $http.$patch('http://api.com/{id}', { foo: 'bar' }, {
 
 - arguments: `(url, options?)`
   - url: `String`
-  - options: [options](/options)
+  - options: [options](/api/options)
 - resolves: -
 - rejects: `Error`
 
@@ -129,7 +129,7 @@ const data = await $http.$patch('http://api.com/{id}', { foo: 'bar' }, {
 
 - arguments: `(url, options?)`
   - url: `String`
-  - options: [options](/options)
+  - options: [options](/api/options)
 - resolves: [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response)
 - rejects: `Error`
 
@@ -146,7 +146,7 @@ const response = await $http.get('items', { prefixUrl: 'https://example.com' })
 const textResponse = await response.text()
 ```
 
-See [`here`](/usage#making-requests) to convert response stream into usable data.
+See [`here`](/getting-started/usage#making-requests) to convert response stream into usable data.
 
 These methods corresponds to the similar named HTTP/1.1 methods.
 
@@ -155,7 +155,7 @@ These methods corresponds to the similar named HTTP/1.1 methods.
 - arguments: `(url, body?, options?)`
   - url: `String`
   - body: `Object`
-  - options: [options](/options)
+  - options: [options](/api/options)
 - resolves: [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response)
 - rejects: `Error`
 
@@ -176,7 +176,7 @@ const response = await $http.post('http://api.com', { foo: 'bar' }, {
 const jsonResponse = await response.json()
 ```
 
-See [`here`](/usage#making-requests) to convert response stream into usable data.
+See [`here`](/getting-started/usage#making-requests) to convert response stream into usable data.
 
 These methods corresponds to the similar named HTTP/1.1 methods.
 
@@ -185,7 +185,7 @@ These methods corresponds to the similar named HTTP/1.1 methods.
 - arguments: `(url, body?, options?)`
   - url: `String`
   - body: `Object`
-  - options: [options](/options)
+  - options: [options](/api/options)
 - resolves: [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response)
 - rejects: `Error`
 
@@ -204,7 +204,7 @@ const response = await $http.put('http://api.com/{id}', { foo: 'bar' }, {
 const jsonResponse = await response.json()
 ```
 
-See [`here`](/usage#making-requests) to convert response stream into usable data.
+See [`here`](/getting-started/usage#making-requests) to convert response stream into usable data.
 
 These methods corresponds to the similar named HTTP/1.1 methods.
 
@@ -212,7 +212,7 @@ These methods corresponds to the similar named HTTP/1.1 methods.
 
 - arguments: `(url, options?)`
   - url: `String`
-  - options: [options](/options)
+  - options: [options](/api/options)
 - resolves: [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response)
 - rejects: `Error`
 
@@ -230,7 +230,7 @@ const response = await $http.delete('item/{id}', {
 })
 ```
 
-See [`here`](/usage#making-requests) to convert response stream into usable data.
+See [`here`](/getting-started/usage#making-requests) to convert response stream into usable data.
 
 These methods corresponds to the similar named HTTP/1.1 methods.
 
@@ -239,7 +239,7 @@ These methods corresponds to the similar named HTTP/1.1 methods.
 - arguments: `(url, body?, options?)`
   - url: `String`
   - body: `Object`
-  - options: [options](/options)
+  - options: [options](/api/options)
 - resolves: [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response)
 - rejects: `Error`
 
@@ -259,7 +259,7 @@ const response = await $http.patch('http://api.com/{id}', { foo: 'bar' }, {
 const jsonResponse = await response.json()
 ```
 
-See [`here`](/usage#making-requests) to convert response stream into usable data.
+See [`here`](/getting-started/usage#making-requests) to convert response stream into usable data.
 
 These methods corresponds to the similar named HTTP/1.1 methods.
 
@@ -267,7 +267,7 @@ These methods corresponds to the similar named HTTP/1.1 methods.
 
 - arguments: `(url, options?)`
   - url: `String`
-  - options: [options](/options)
+  - options: [options](/api/options)
 - resolves: [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response)
 - rejects: `Error`
 
