--- a/docs/pages/en/2.API/3.helpers.md
+++ b/docs/pages/en/2.API/3.helpers.md
@@ -50,7 +50,7 @@ Globally set a header to all subsequent requests
 this.$http.setHeader('Content-Type', 'application/json')
 ```
 
-See [here](/advanced#header-helpers) for usage.
+See [here](/getting-started/advanced#header-helpers) for usage.
 
 ## `setToken`
 
@@ -63,10 +63,10 @@ Globally set a `Authorization` header for all subsequent requests.
 this.$http.setToken('123', 'Bearer')
 ```
 
-See [here](/advanced#settokentoken-type) for usage.
+See [here](/getting-started/advanced#settokentoken-type) for usage.
 
 ## `create`
 
 - arguments: `(kyOptions)`
 
-Create a new KY instance based on defaults, see [create new instance based on defaults](/advanced#create-new-instance-based-on-defaults) for usage.
+Create a new KY instance based on defaults, see [create new instance based on defaults](/getting-started/advanced#create-new-instance-based-on-defaults) for usage.
