--- a/docs/pages/en/2.API/4.hooks.md
+++ b/docs/pages/en/2.API/4.hooks.md
@@ -19,7 +19,7 @@ export default function ({ $http }) {
 }
 ```
 
-See [here](/advanced#hooks) for advanced usage.
+See [here](/getting-started/advanced#hooks) for advanced usage.
 
 ## `onResponse`
 
@@ -37,7 +37,7 @@ export default function ({ $http }) {
 }
 ```
 
-See [here](/advanced#hooks) for advanced usage.
+See [here](/getting-started/advanced#hooks) for advanced usage.
 
 ## `onError`
 
@@ -65,4 +65,4 @@ Available properties:
 
 You can optionally return a value or promise that can resolve for fallback response. If hook returns any value, other hooks **won't** be called.
 
-See [here](/advanced#hooks) for advanced usage.
+See [here](/getting-started/advanced#hooks) for advanced usage.
