--- a/docs/pages/en/3.migration-guides/1.migration.md
+++ b/docs/pages/en/3.migration-guides/1.migration.md
@@ -11,12 +11,12 @@ The nuxt-community axios module is still supported and maintained. The HTTP modu
 
 ## Differences
 
-- There is no scope for [`setHeader`](/helpers#setheader), [`setToken`](/helpers#settoken)<br/>
+- There is no scope for [`setHeader`](/api/helpers#setheader), [`setToken`](/api/helpers#settoken)<br/>
 _When calling these methods they apply to the global scope and are used for all future requests_
 - The axios hooks `onRequestError` and `onResponseError` are unified<br/>
-_Use the [`onError`](/hooks#onerror) hook instead_
+_Use the [`onError`](/api/hooks#onerror) hook instead_
 - The http module does not have a `debug` option like the axios module<br/>
-_You can setup a basic logger using the [`onRequest`](/hooks#onrequest) hook_
+_You can setup a basic logger using the [`onRequest`](/api/hooks#onrequest) hook_
 - Progress bar integration is not supported (for the moment)<br/>
 _This option may be added again once [`PR #105 : progress bar`](https://github.com/nuxt/http/pull/105) is merged_
 
