--- a/docs/pages/en/2.API/1.options.md
+++ b/docs/pages/en/2.API/1.options.md
@@ -34,7 +34,7 @@ Base URL which is used and prepended to make requests in server side.
 Environment variable `API_URL` can be used to **override** `baseURL`.
 
 :::alert{type="info"}
-`baseURL` and `proxy` won't work together, you will need to use [`prefix`](/options#prefix) instead
+`baseURL` and `proxy` won't work together, you will need to use [`prefix`](#prefix) instead
 :::
 
 ## `browserBaseURL`
