--- a/docs/pages/en/1.index.md
+++ b/docs/pages/en/1.index.md
@@ -4,7 +4,7 @@ description: 'HTTP module for Nuxt.js provides a universal way to make HTTP requ
 ---
 
 :::alert{type="warning"}
-This module will not be compatible with Nuxt 3 in the future, due to the [`$fetch`](https://v3.nuxtjs.org/docs/usage/data-fetching/#usefetch) method integrated in Nuxt 3.
+Nuxt 3 users can use the new [$fetch](https://v3.nuxtjs.org/docs/usage/data-fetching/#usefetch) method integrated in the framework.
 :::
 
 
