fix: nuxt3 warn

--- a/docs/pages/en/1.index.md
+++ b/docs/pages/en/1.index.md
@@ -4,7 +4,7 @@ description: 'HTTP module for Nuxt.js provides a universal way to make HTTP requ
 ---
 
 :::alert{type="warning"}
-Nuxt 3 users can use the new [$fetch](https://v3.nuxtjs.org/docs/usage/data-fetching/#usefetch) method integrated in the framework.
+HTTP module supports Nuxt 2. Nuxt 3 users can use the new isomorphic [$fetch API](https://v3.nuxtjs.org/docs/usage/data-fetching/#usefetch) ([migration guide](https://v3.nuxtjs.org/docs/migration/component-options#isomorphic-fetch)).
 :::
 
 
