--- a/docs/pages/en/1.getting-started/1.setup.md
+++ b/docs/pages/en/1.getting-started/1.setup.md
@@ -77,4 +77,4 @@ Add the types to your "types" array in `tsconfig.json` after the `@nuxt/types` (
 
 > **Why?**
 >
-> Because of the way Nuxt works the `$http` property on the context has to be merged into the Nuxt `Context` interface via [declaration merging](https://www.typescriptlang.org/docs/handbook/declaration-merging.html). Adding `@nuxtjs/http` to your types will import the types from the package and make typescript aware of the additions to the `Context` interface.
+> Because of the way Nuxt works the `$http` property on the context has to be merged into the Nuxt `Context` interface via [declaration merging](https://www.typescriptlang.org/docs/handbook/declaration-merging.html). Adding `@nuxt/http` to your types will import the types from the package and make typescript aware of the additions to the `Context` interface.
