fix: parameter mismatch

--- a/docs/pages/en/2.API/4.hooks.md
+++ b/docs/pages/en/2.API/4.hooks.md
@@ -51,7 +51,7 @@ If the error originated from a request.
 export default function ({ $http, redirect }) {
   $http.onError((err) => {
     // In case of unauthorized, redirect to a specific page
-    if (error.statusCode === 401) {
+    if (err.statusCode === 401) {
       redirect('/401')
     }
   })
