feat(docs): upgrade to latest Docus

--- a/docs/content/1.getting-started/1.setup.md
+++ b/docs/content/1.getting-started/1.setup.md
@@ -1,6 +1,7 @@
----
-title: Setup
-description: 'How to setup your module'
+# Setup
+
+How to setup your module.
+
 ---
 
 Checkout the [Nuxt documentation](https://nuxtjs.org/api/configuration-modules#the-modules-property) for more information about installing and using modules.
@@ -9,22 +10,15 @@ Checkout the [Nuxt documentation](https://nuxtjs.org/api/configuration-modules#t
 
 Add `@nuxt/http` dependency to your project:
 
-:::::code-group
-  ::::code-block{label="Yarn" active}
-
-  ```bash
+::code-group
+  ```bash [Yarn]
   yarn add @nuxt/http
   ```
 
-  ::::
-  ::::code-block{label="NPM"}
-
-  ```bash
+  ```bash [NPM]
   npm install @nuxt/http
   ```
-
-  ::::
-:::::
+::
 
 Then add it to the modules section in your `nuxt.config.js`:
 
@@ -34,9 +28,9 @@ export default {
 }
 ```
 
-:::alert{type="success"}
+::alert{type="success"}
 That's it! You can now use [$http](/usage) in your Nuxt app ✨
-:::
+::
 
 ## Configure
 
@@ -56,9 +50,9 @@ export default {
 
 See [http's options](/API/options).
 
-:::alert{type="warning"}
+::alert{type="warning"}
 Note that this module does not currently support IE 11 because of using [ky](https://github.com/sindresorhus/ky) ([open issue](https://github.com/nuxt/http/issues/126))
-:::
+::
 
 ## TypeScript
 
