--- a/docs/content/1.getting-started/2.usage.md
+++ b/docs/content/1.getting-started/2.usage.md
@@ -1,6 +1,7 @@
----
-title: Usage
-description: 'How to use this module'
+# Usage
+
+How to use this module.
+
 ---
 
 ## Making Requests
@@ -108,9 +109,9 @@ methods: {
 }
 ```
 
-:::alert{type="info"}
+::alert{type="info"}
 `this` is not available in Nuxt's `asyncData` method, see [using in `asyncData`](#using-in-asyncdata) for how to use this module in `asyncData`
-:::
+::
 
 ## Using in Store
 
