--- a/docs/content/1.getting-started/3.http-methods.md
+++ b/docs/content/1.getting-started/3.http-methods.md
@@ -1,11 +1,14 @@
 ---
-title: HTTP Methods
-description: 'HTTP Methods'
+description: 'HTTP Methods.'
 ---
 
-:::alert{type="info"}
+# HTTP Methods
+
+---
+
+::alert{type="info"}
 Each http method returns a `Promise`
-:::
+::
 
 ### `$get`
 
