--- a/docs/content/2.API/1.options.md
+++ b/docs/content/2.API/1.options.md
@@ -1,9 +1,8 @@
----
-title: Options
-description: 'You can pass options using module options or http section in nuxt.config.js'
----
+# Options
 
-You can pass options using module options or `http` section in `nuxt.config.js`
+You can pass options using module options or `http` section in `nuxt.config.js`.
+
+---
 
 ```js
 {
@@ -33,9 +32,9 @@ Base URL which is used and prepended to make requests in server side.
 
 Environment variable `API_URL` can be used to **override** `baseURL`.
 
-:::alert{type="info"}
+::alert{type="info"}
 `baseURL` and `proxy` won't work together, you will need to use [`prefix`](/options#prefix) instead
-:::
+::
 
 ## `browserBaseURL`
 
@@ -82,11 +81,11 @@ You can easily integrate HTTP with [Proxy Module](https://github.com/nuxt-commun
 }
 ```
 
-:::alert{type="info"}
+::alert{type="info"}
 It is not required to manually register `@nuxtjs/proxy` module, but it does need to be in your dependencies
-:::
+::
 
-:::alert{type="info"}
+::alert{type="info"}
 `/api/` will be added to all requests to the API end point. If you need to remove it use `pathRewrite`:
 
 ```js
@@ -97,7 +96,7 @@ proxy: {
   }
 }
 ```
-:::
+::
 
 ## `retry`
 
@@ -147,9 +146,9 @@ In SSR context, sets client request header as http default request headers.
 This is useful for making requests which need cookie based auth on server side.
 Also helps making consistent requests in both SSR and Client Side code.
 
-:::alert{type="info"}
+::alert{type="info"}
 When directing requests at a url protected by CloudFlare's CDN you should set this to `false` to prevent CloudFlare from mistakenly detecting a reverse proxy loop and returning a 403 error.
-:::
+::
 
 ## `proxyHeadersIgnore`
 
@@ -163,10 +162,10 @@ Headers added to all requests. If provided, will be merged with the defaults.
 
 * Default: `{}`
 
-:::alert{type="info"}
+::alert{type="info"}
 Do NOT include any credentials or tokens here. One can easily access them.
-:::
+::
 
-:::alert{type="info"}
+::alert{type="info"}
 This headers are effective to ALL requests. Please take care and consider providing special headers on each call that needs this unless you are pretty sure you always need to add headers.
-:::
+::
