--- a/docs/content/2.API/3.helpers.md
+++ b/docs/content/2.API/3.helpers.md
@@ -1,11 +1,12 @@
----
-title: Helpers
-description: 'Helpers available on $http instance.'
---- 
+# Helpers
 
-:::alert{type="info"}
+Helpers available on $http instance.
+
+---
+
+::alert{type="info"}
 Helpers available on `$http` instance.
-:::
+::
 
 ## `setBaseURL`
 
