--- a/docs/content/2.API/4.hooks.md
+++ b/docs/content/2.API/4.hooks.md
@@ -1,6 +1,7 @@
----
-title: Hooks
-description: 'Hooks with arguments.'
+# Hooks
+
+Hooks with arguments.
+
 ---
 
 The `arguments` listed below are those your hook will receive when it's called.
