--- a/docs/content/2.API/2.runtime-config.md
+++ b/docs/content/2.API/2.runtime-config.md
@@ -1,6 +1,7 @@
----
-title: Runtime Config
-description: 'The use of runtime config is mandatory in case of using environment variables in production.'
+# Runtime Config
+
+The use of runtime config is mandatory in case of using environment variables in production.
+
 ---
 
 The use of [runtime config](https://nuxtjs.org/guide/runtime-config) is mandatory in case of using environment variables in production. Otherwise, the values will be hard coded during build and won't change until the next build.
