--- a/docs/content/3.migration-guides/1.migration.md
+++ b/docs/content/3.migration-guides/1.migration.md
@@ -1,13 +1,14 @@
----
-title: Migration Guides
-description: 'How to migrate from Axios module'
+# Migration Guides
+
+How to migrate from Axios module
+
 ---
 
 This guide will help you to migrate from [Axios Module](https://github.com/nuxt-community/axios-module).
 
-:::alert{type="info"}
+::alert{type="info"}
 The nuxt-community axios module is still supported and maintained. The HTTP module uses newer web technologies like fetch which might be beneficial
-:::
+::
 
 ## Differences
 
