--- a/docs/content/1.index.md
+++ b/docs/content/1.index.md
@@ -5,7 +5,7 @@ HTTP module for Nuxt.js provides a universal way to make HTTP requests to the AP
 ---
 
 ::alert{type="warning"}
-HTTP module supports Nuxt 2. Nuxt 3 users can use the new isomorphic [$fetch API](https://v3.nuxtjs.org/getting-started/data-fetching#isomorphic-fetch-and-fetch) ([migration guide](https://v3.nuxtjs.org/docs/migration/component-options#isomorphic-fetch)).
+HTTP module supports Nuxt 2. Nuxt 3 users can use the new isomorphic [$fetch API](https://nuxt.com/docs/getting-started/data-fetching#isomorphic-fetch-and-fetch) ([migration guide](https://nuxt.com/docs/migration/component-options#isomorphic-fetch)).
 ::
 
 The HTTP module for [Nuxt](https://nuxtjs.org) provides a universal way to make HTTP requests to any API.
