docs: upgrade to latest Docus (#214)
* feat(docs): upgrade to latest Docus

* update

Co-authored-by: Sébastien Chopin <seb@nuxtjs.com>

--- a/docs/content/1.index.md
+++ b/docs/content/1.index.md
@@ -1,16 +1,12 @@
+# Introduction
+
+HTTP module for Nuxt.js provides a universal way to make HTTP requests to the API backend.
+
 ---
-title: Introduction
-description: 'HTTP module for Nuxt.js provides a universal way to make HTTP requests to the API backend.'
----
 
-:::alert{type="warning"}
-HTTP module supports Nuxt 2. Nuxt 3 users can use the new isomorphic [$fetch API](https://v3.nuxtjs.org/getting-started/data-fetching#isomorphic-fetch-and-fetch) ([migration guide](https://v3.nuxtjs.org/docs/migration/component-options#isomorphic-fetch)).
-:::
-
-
-<img src="/preview.png" class="transition-shadow duration-200 rounded-md shadow light-img hover:shadow-lg" />
-
-<img src="/preview-dark.png" class="transition-shadow duration-200 rounded-md shadow dark-img hover:shadow-lg" />
+::alert{type="warning"}
+HTTP module supports Nuxt 2. Nuxt 3 users can use the new isomorphic [$fetch API](https://nuxt.com/docs/getting-started/data-fetching#isomorphic-fetch-and-fetch) ([migration guide](https://nuxt.com/docs/migration/component-options#isomorphic-fetch)).
+::
 
 The HTTP module for [Nuxt](https://nuxtjs.org) provides a universal way to make HTTP requests to any API.
 
@@ -22,7 +18,7 @@ Starting from [v2.5.0](https://github.com/nuxt/nuxt.js/releases/tag/v2.5.0), Nux
 
 ## Features
 
-:::list
+::list
 
 - The fluent ky API has been extended with enhancements and shortcuts
 - Highly customizable options support for `BaseURL`
@@ -30,7 +26,7 @@ Starting from [v2.5.0](https://github.com/nuxt/nuxt.js/releases/tag/v2.5.0), Nux
 - Best practices to avoid token sharing when making server side requests
 - Easy proxy support to avoid CORS problems and making deployment easier
 
-:::
+::
 
 ## Links
 
