--- a/docs/content/1.getting-started/1.setup.md
+++ b/docs/content/1.getting-started/1.setup.md
@@ -29,7 +29,7 @@ export default {
 ```
 
 ::alert{type="success"}
-That's it! You can now use [$http](/usage) in your Nuxt app ✨
+That's it! You can now use [$http](/getting-started/usage) in your Nuxt app ✨
 ::
 
 ## Configure
